tests/ast_bad_old_varray_type.stderr
tests/ast_bad_old_varray_type.sl:3:12: error: SL1007: expected type
