tests/ast_bad_old_varray_type.sl
// Verifies the AST for bad old varray type.
fn main() i32 {
    var x [.n]u8
    return 0
}
